# langchain_app

./: README.md  app_chat_2.py  docker-compose.yaml  dockerfile  function_calling.py  gradio_app_chat.py  gradio_chat_select_model.py  pyproject.toml  start.sh  streamlit_app_chat.py  streamlit_chat_select_model.py
agent_your_research/gradio/: gradio_agent_yor_resarch.py
agent_your_research/gradio/tools/: fetch_page.py  search_ddg.py
agent_your_research/streamlit/: main.py
data_analysis/streamlit/: main.py
data_analysis/streamlit/src/: code_interpreter.py
data_analysis/streamlit/tools/: code_interpreter.py
pdf_qa_app/gradio/: gradio_pdf_qa_app.py
pdf_qa_app/streamlit/: streamlit_pdf_qa.py
pdf_qa_app/streamlit/pages/: PDF_QA.py  Upload_PDF.py
